--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioOptions"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="40sp" />
 
     <Button
         android:id="@+id/btn_subscribe"
